@@ -709,14 +709,14 @@ Can't resume all threads and specify proceed count simultaneously."));
       struct thread_info *tp;
 
       if (non_stop)
-	tp = find_thread_pid (inferior_ptid);
+	tp = find_thread_ptid (inferior_ptid);
       else
 	{
 	  ptid_t last_ptid;
 	  struct target_waitstatus ws;
 
 	  get_last_target_status (&last_ptid, &ws);
-	  tp = find_thread_pid (last_ptid);
+	  tp = find_thread_ptid (last_ptid);
 	}
       if (tp != NULL)
 	bs = tp->stop_bpstat;
@@ -1583,7 +1583,7 @@ program_info (char *args, int from_tty)
   else if (is_running (ptid))
     error (_("Selected thread is running."));
 
-  tp = find_thread_pid (ptid);
+  tp = find_thread_ptid (ptid);
   bs = tp->stop_bpstat;
   stat = bpstat_num (&bs, &num);
 
